--- a/package.json
+++ b/package.json
@@ -7,11 +7,21 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
+    "@nuxt/eslint": "1.3.0",
+    "@nuxt/image": "1.10.0",
+    "@nuxt/ui": "^3.0.2",
+    "@vueuse/nuxt": "13.1.0",
+    "eslint": "^9.0.0",
     "nuxt": "^3.16.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
+  },
+  "devDependencies": {
+    "typescript": "^5.8.3"
   }
 }
